[metadata]
name = tasknet
description = Seamless integration of tasks with huggingface models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sileod/tasknet/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    torch
    transformers
    datasets
    evaluate
    lazy_load
    easydict
    frozendict
    funcy
    seqeval
    magicattr
    sentencepiece

[options.packages.find]
where = src
